--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,11 @@
 // main colors
-$background: #7D3BC9;
+$background: #7d3bc9;
 $block-background: #fffeff;
 $block-border: 3px solid #b57bfe;
 $block-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+$skip-color: #dde3e9;
 
-$header-title-color: #7D3BC9;
+$header-title-color: #7d3bc9;
 $header-title-shadow-color: 0px 2px 0px #b20d78;
 
 $white: #ffffff;
@@ -13,10 +14,11 @@ $white: #ffffff;
 $custom-button-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
 $custom-button-primary: #4cdafe;
 $custom-button-primary-shadow: inset 0 -5px 0px #08b9ff;
-$custom-button-success: #52783A;
+$custom-button-success: #52783a;
 $custom-button-success-shadow: 0px 2px 0px rgba(0, 0, 0, 0.15);
+$custom-button-check: #C4E3BF;
 
 // InputComponent
 $cinput-font-color: #228aed;
 $cinput-background-color: #c2fdff;
-$cinput-title-color: #147CA9;
+$cinput-title-color: #147ca9;
